RUN setup + new SC3 DB

--- a/etc/global.cfg
+++ b/etc/global.cfg
@@ -1,7 +1,7 @@
 core.plugins = dbmysql
 
-datacenterID = Sc3VM
+datacenterID = vm274
 
-agencyID = Sc3VM
+agencyID = Sc3_VM_2013.274
 
-organization = Sc3VM
+organization = vm274
