SET a Global.cfg files for recordstream sources mostly

--- a/etc/global.cfg
+++ b/etc/global.cfg
@@ -1,7 +1,64 @@
+# Sets the datacenter ID which is primarily used by Arclink and its tools.
+datacenterID = WEL 
+
+# Defines the agency ID used to set creationInfo.agencyID in data model objects.
+agencyID = WEL(Test_2013.274)
+
+# Organization name used mainly by ArcLink and SeedLink.
+organization = Geonet
 core.plugins = dbmysql
 
-datacenterID = vm274
+##### Using Default Geonet  + Perso Configuration ####
+# Automatically configured record stream service and source
+#recordstream.service = combined
+#recordstream.source = sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=86400
+recordstream.service = sdsarchive
 
-agencyID = Sc3_VM_2013.274
+#recordstream.source = /home/salichon/SDS
+# Alternative combined record stream sources
+#recordstream.service = combined
+# Primary (Avalon)
+#recordstream.source = "sl-primary.geonet.org.nz:18000;sl-primary.geonet.org.nz:18001??slinkMax=86400"
+# Backup (Avalon)
+#recordstream.source = "sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=86400"
+# Backup (Wairakei)
+#recordstream.source = "sl-backup2.geonet.org.nz:18000;sl-backup2.geonet.org.nz:18001??slinkMax=86400"
+# Public Link (Avalon)
+#recordstream.source = "link.geonet.org.nz:18000;link.geonet.org.nz:18001??slinkMax=86400"
+core.plugins = dbmysql
 
-organization = geonet
+#### Add in JS 2013 ####
+## Logging level ##
+logging.level = 3
+
+## Plugin MLh and  usage ##
+#The MLh plugin must be loaded from an application that
+#links to libseiscomp3_processing: scmag, scamp, scautopick, or scolv.
+plugins = mlh
+
+#MLh plugin - a global set up to include MLh
+# Use of default magnitudes in global.cfg - easier to handle  -replay not ops ?
+# Also used for the  MLh plugin - A global set-up to include MLh
+#amplitudes = ML, MLh, MLv, mb, mB, mBc, Mwp, Ms(BB), Mjma
+#magnitudes = ML, MLh, MLv, mb, mB, mBc, Mw(mB), Mw(Mwp),Mwp, Ms(BB), Mjma, M
+amplitudes = MLv, mB
+
+magnitudes = MLv, mB, Mw(mB), M
+
+# MLh plugin parameters -default -
+# define combiner operation for both horizontals (min, max, avg)
+module.trunk.global.MLh.maxavg = max
+
+# define attenuation parameters for ML(SED)
+# format: "UpToKilometers A B; UpToNextKilometers A B;"
+# the first parameter set "30 nomag" means that up to 30km
+# from the sensor the magnitude should not be calculated
+module.trunk.global.MLh.params = "30 nomag; 60 0.018 2.17; 700 0.0038 3.02"
+
+# MLh clipping level, in raw counts, eg. 80% of 2^23 = 6710886
+module.trunk.global.MLh.ClippingThreshold = 6710886
+
+##
+## Fonts and Size
+scheme.fonts.base.family = Arial
+scheme.fonts.base.size = 12
