--- a/etc/scmaster.cfg
+++ b/etc/scmaster.cfg
@@ -1,9 +1,18 @@
+# Defines a list of modules loaded at startup.
 plugins = dbplugin
-
 core.plugins = dbmysql
 
+# Selected the database driver to use. Database drivers are available through
+# plugins. The default plugin is dbmysql which supports the MYSQL database
+# server. It is activated with the core.plugins parameter.
 plugins.dbPlugin.dbDriver = mysql
 
+# Sets the database read connection which is reported to clients that connect
+# to this server. If a remote setup should be implemented, ensure that the
+# hostname is reachable from the remote computer.
 plugins.dbPlugin.readConnection = sysop:sysop@localhost/seiscomp3
 
+# Sets the database write connection which is private to scmaster. A separate
+# write connection enables different permissions on the database level for
+# scmaster and clients.
 plugins.dbPlugin.writeConnection = sysop:sysop@localhost/seiscomp3
