Added scautoloc config file -GEONET RAPID Config

--- a/etc/global.cfg
+++ b/etc/global.cfg
@@ -11,8 +11,8 @@ core.plugins = dbmysql
 ##### Using Default Geonet  + Perso Configuration ####
 # Automatically configured record stream service and source
 #recordstream.service = combined
-#recordstream.source = sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=86400
-recordstream.service = sdsarchive
+recordstream.source = sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=86400
+#recordstream.service = sdsarchive
 
 #recordstream.source = /home/salichon/SDS
 # Alternative combined record stream sources
