CORRECTED recordstream option - to access Geonet servers

--- a/etc/global.cfg
+++ b/etc/global.cfg
@@ -10,7 +10,7 @@ core.plugins = dbmysql
 
 ##### Using Default Geonet  + Perso Configuration ####
 # Automatically configured record stream service and source
-#recordstream.service = combined
+recordstream.service = combined
 recordstream.source = sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=86400
 #recordstream.service = sdsarchive
 
