--- a/etc/scautoloc.cfg
+++ b/etc/scautoloc.cfg
@@ -1,39 +1,99 @@
+# Author for created objects
+author = @appname@@@@hostname@
+
+## Send to the LOCATION group
+connection.primaryGroup = LOCATION
+
+## Receive objects from PICK and AMPLITUDE groups
+connection.subscriptions = PICK, AMPLITUDE
+
+## max. permissible RMS for a location to be reported
+#autoloc.maxRMS = 3.5
 autoloc.maxRMS = 2.0
 
+## max. individual residual (unweighted) for a pick to
+## be used in location
+#autoloc.maxResidual = 7.0
 autoloc.maxResidual = 3.0
 
+### Geonet Like
 # TODO: Investigate minScore!!!
 autoloc.minScore = 4
 autoloc.dynamicPickThresholdInterval = 60
-autoloc.amplTypeAbs = "snr"
+## max. age for objects kept in memory, in seconds
+## Default is 6 hours - don't change.
 autoloc.maxAge = 21600
+## Clean-up interval for removing old/unused objects, in seconds
+## Don't change.
+#autoloc.cleanupInterval = 3600
+## Don't change.
+#autoloc.wakeupInterval = 5
+### 
 
-autoloc.publicationIntervalTimeSlope = 1.0
-autoloc.publicationIntervalTimeIntercept = 20
-autoloc.publicationIntervalPickCount = 30
-
-
-autoloc.grid = @DATADIR@/scautoloc/nz-grid.conf
-
-autoloc.stationConfig = @DATADIR@/scautoloc/nz-station.conf
-
-
-#### Adds on J.salichon 2013 ? 
-plugins = ${plugins}, locnll 
-## "Normal" arrivals
-# Test setup for picks ass.
-#autoloc.minPhaseCount = 8 
-# Catalog Default setup for picks ass.
-autoloc.minPhaseCount = 10
+## Max. secondary azimuth gap for an origin to be reported by.
+## Default is 360 degrees, i.e. no restriction based on this parameter.
+#autoloc.maxSGAP = 360
 
 #autoloc.maxStationDistance = 180
-autoloc.defaultDepth = 10 #  if source depth is not resolved-bad station distribution # doesn't work with reloc/nll
+autoloc.minPhaseCount = 10
+
+## Arrivals with exceptionally large amplitudes may be
+## flagged as XXL, allowing (in future) faster, preliminary
+## "heads-up" alerts.
+# Limiting/Disabling XXL preliminary (P) location feature 
+autoloc.maxDistanceXXL = 0. # Joachim S. advice to prevent preliminary origins
+autoloc.minPhaseCountXXL = 10 # Additional safety - Geonet Rapid min Stations
+autoloc.thresholdXXL = 1000000000. # Additional safety - Limiting XXL picks release 1e+9
+
+## If the station count for stations at < 105 degrees
+## distance exceeds this number, no picks at > 105 degrees will be
+## used in location. They will be loosely associated, though.
+#autoloc.minStaCountIgnorePKP = 30
+
+## Grid configuration
+autoloc.grid = @DATADIR@/scautoloc/nz-grid.conf
+
+## Station configuration
+autoloc.stationConfig = @DATADIR@/scautoloc/nz-station.conf
+
+## This is only relevant in offline/testing mode
+#locator.stationLocations = @DATADIR@/scautoloc/nz-station-locations.conf
+
+## Manual picks/origins can be fed back into autoloc for two purposes:
+##   * passive association to a solution from a "trusted" source so that we
+##     avoid fake or wrong locations due to events outside our area of interest
+##   * use the manual origins in further processing, especially the manual picks.
+##     Possibly also honor an operator specified fixed depth.
+## Currently we only permit use of manual picks which are then used
+## instead of the corresponding automatic picks (if existing)
+# autoloc.useManualPicks = false
+
+
 ## Log all picks received by scautoloc to this file
 autoloc.pickLog = @LOGDIR@/autoloc-picklog
 
-## disabling the threshold XXL pick feature ##
-autoloc.maxStationDistanceXXL = 0. # test to disable XXL picks 
-#autoloc.thresholdXXL = 10000000. # disable XXL feature # Advised one for STA/LTA # !picker depending!
-autoloc.thresholdXXL = 1000000000. # disable XXL feature # AIC PP # !picker depending!
-autoloc.minPhaseCountXXL = 15 ## instead of 4 (default) -
+# Amplitude type to be used as SNR amplitude
+# Don't change unless you know exactly what you are doing.
+autoloc.amplTypeSNR = snr
 
+# Amplitude type to be used as absolute amplitude
+# Don't change unless you know exactly what you are doing.
+#autoloc.amplTypeAbs = mb
+autoloc.amplTypeAbs = snr
+
+# Use manual origins from our own agency. Essentially it means to
+# use manual picks from manual origins, which is assumed to be
+# better than using only automatic picks.
+autoloc.useManualOrigins = false
+# NOTE: If you set the above to true, then make sure to add the
+# LOCATION group to connection.subscriptions!
+
+# If autoloc.useManualOrigins is true, adopt the depth from manual
+# origins, which is especially important if it was fixed by the analyst.
+autoloc.adoptManualDepth = false
+
+### Publication interval
+autoloc.publicationIntervalTimeSlope = 1.0
+autoloc.publicationIntervalTimeIntercept = 20
+autoloc.publicationIntervalPickCount = 30
+###
