--- a/etc/scmag.cfg
+++ b/etc/scmag.cfg
@@ -1,39 +1,60 @@
-###
-### Delivered by puppet
-###
-magnitudes = MLh, MLv, ML, mB, Mw(mB), M
+# Author for created objects
+author = @appname@@@@hostname@
 
-summaryMagnitude.coefficients.a = 0, Mw(mB):0.4
-summaryMagnitude.coefficients.b = 1, MLv:2, Mw(mB):-1
+# Send to the MAGNITUDE group
+connection.primaryGroup = MAGNITUDE
 
-summaryMagnitude.whitelist = MLv, Mw(mB)
-#summaryMagnitude.blacklist = "Mw(mB)"
+# Receive objects from PICK, AMPLITUDE and LOCATION group
+connection.subscriptions = PICK, AMPLITUDE, LOCATION
 
+# Interval between 2 sending processes. The interval has influence how often
+# information is updated.
+sendInterval = 1
 
-#### Adds on JS 2013 ###
+# The minimum weight of an arrival to be used for magnitude
+# calculations.
+minimumArrivalWeight = 0.5
+
+# Defines the types of magnitudes to calculate.
+# A magnitude of a given type is going to be calculated
+# only when a corresponding amplitude exists. Check
+# the amplitudes calculated by scautopick and scamp also.
+magnitudes = MLv, mb, mB, Mwp, Mw(mB)
 
 # Defines the average method to use when computing
 # the network magnitude. To define the average method
 # per magnitude type append the type, eg:
 # magnitudes.average = default, MLv:median
-# The default behaviour is to compute the mean if more
-# than 3 contributed station magnitudes exist otherwise
+# The default behaviour is to compute the mean if less
+# than 4 contributed station magnitudes exist otherwise
 # a trimmed mean of 25 percent is used.
 magnitudes.average = default
 
 # Enable/disable calculation of a summary magnitude
 summaryMagnitude.enabled = true
 
-# Experimental feature not implemented 
-# Jan Becker [11/16/2011]
-# Magnitude "correction" 
-# module.trunk.[global|AB|AB.CDEFG].mag.MLv.offset = 0.0
-# module.trunk.[global|AB|AB.CDEFG].mag.MLv.multiplier = 1.0
+# This is the minimum station magnitude required for any
+# magnitude to contribute to the summary magnitude at all. If
+# this is set to 4 then no magnitude with less than 4 station
+# magnitudes is taken into consideration even if this results
+# in no summary magnitude at all. For this reason, the
+# default here is 1 but in a purely automatic system it should
+# be higher, at least 4 is recommended.
+summaryMagnitude.minStationCount = 1
 
-# Per station, network or globally. In Zurich you can do it for all magnitudes
-# (though mb and mB cannot be distinguished due to the case insensitivity of the
-# configuration files which will change in the future).
-# finalMag = multiplier * mag + offset
-# Though it seems unlikely that anyone ever wants to user the multiplier option on a magnitude.
-# But *if* it ever need to it *can* be done.
-# Joachim
+# Define the type of the summary magnitude
+summaryMagnitude.type = M
+
+# Define the coefficients to calculate the weight
+# of a magnitude:
+#   weight = a*magStationCount+b
+# Unnamed values define the default values
+#summaryMagnitude.coefficients.a = 0, Mw(mB):0.4,Mw(Mwp):0.4
+#summaryMagnitude.coefficients.b = 1, MLv:2, Mw(mB):-1, Mw(Mwp):-1
+summaryMagnitude.coefficients.a = 0, Mw(mB):0.4
+summaryMagnitude.coefficients.b = 1, MLv:2, Mw(mB):-1
+
+# Define the magnitudes to include into the the summary magnitude
+# calculation
+summaryMagnitude.whitelist = MLv, Mw(mB)
+#summaryMagnitude.blacklist = mB, Mwp
