--- a/etc/scmaster.cfg
+++ b/etc/scmaster.cfg
@@ -1,18 +1,34 @@
-# Defines a list of modules loaded at startup.
-plugins = dbplugin
-core.plugins = dbmysql
+# configure the message groups to use
+msgGroups = AMPLITUDE, \
+            PICK, \
+            LOCATION, \
+            MAGNITUDE, \
+            FOCMECH, \
+            EVENT, \
+            QC, \
+            PUBLICATION, \
+            GUI, \
+            INVENTORY, \
+            ROUTING, \
+            CONFIG, \
+            LOGGING, \
+            SERVICE_REQUEST, \
+            SERVICE_PROVIDE
 
-# Selected the database driver to use. Database drivers are available through
-# plugins. The default plugin is dbmysql which supports the MYSQL database
-# server. It is activated with the core.plugins parameter.
-plugins.dbPlugin.dbDriver = mysql
+# Force the schema version to be reported to clients. This must be equal
+# or lower than the one the code supports otherwise scmaster will fail to
+# start. This is an expert setting and can be required if clients with
+# version equal or lower than 2013.245 connect to a master with a higher
+# schema version because of a bug on client side.
+#schemaVersionOverride = 0.6
 
-# Sets the database read connection which is reported to clients that connect
-# to this server. If a remote setup should be implemented, ensure that the
-# hostname is reachable from the remote computer.
-plugins.dbPlugin.readConnection = sysop:sysop@localhost/seiscomp3
+# Name of admin user used to authenticate with scadmin to manage client
+# connections.
+admin.adminname = ""
 
-# Sets the database write connection which is private to scmaster. A separate
-# write connection enables different permissions on the database level for
-# scmaster and clients.
-plugins.dbPlugin.writeConnection = sysop:sysop@localhost/seiscomp3
+# Password of admin user used to authenticate with scadmin to manage client
+# connections.
+admin.password = ""
+
+# added from geonet 
+plugins = "dbplugin"
