SET new/updated station in nz-station file: AKCZ EYCZ GCSZ MHCZ MTHZ OKCZ RACZ TON8 WACZ WSRZ

--- a/share/scautoloc/nz-station.conf
+++ b/share/scautoloc/nz-station.conf
@@ -1,6 +1,7 @@
 *  *     0 180.0
 NZ *     1 1.0
 NZ ABAZ  1 2.0
+NZ AKCZ  1 2.0
 NZ ARAZ  1 2.0
 NZ ALRZ  1 2.0
 NZ AMCZ  1 2.0
@@ -22,6 +23,8 @@ NZ DVHZ  1 2.0
 NZ EDRZ  1 2.0
 NZ EPAZ  1 2.0
 NZ ETAZ  1 2.0
+NZ EYCZ  1 2.0
+NZ GCSZ  1 2.0
 NZ GRRZ  1 2.0
 NZ HATZ  1 2.0
 NZ HBAZ  1 2.0
@@ -44,6 +47,7 @@ NZ LREZ  1 2.0
 NZ MARZ  1 2.0
 NZ MBAZ  1 2.0
 NZ MCHZ  1 2.0
+NZ MHCZ  1 2.0
 NZ MHEZ  1 2.0
 NZ MHGZ  1 2.0
 NZ MKRZ  1 2.0
@@ -51,6 +55,7 @@ NZ MOVZ  1 2.0
 NZ MRHZ  1 2.0
 NZ MSWZ  1 2.0
 NZ MTAZ  1 2.0
+NZ MTHZ  1 2.0
 NZ MTVZ  1 2.0
 NZ MTW   1 2.0
 NZ MUGZ  1 2.0
@@ -63,6 +68,7 @@ NZ NMHZ  1 2.0
 NZ NWEZ  1 2.0
 NZ OGWZ  1 2.0
 NZ OHWZ  1 2.0
+NZ OKCZ  1 2.0
 NZ OMRZ  1 2.0
 NZ OTVZ  1 2.0
 NZ PAWZ  1 2.0
@@ -78,6 +84,7 @@ NZ PRGZ  1 2.0
 NZ PRHZ  1 2.0
 NZ PRRZ  1 2.0
 NZ PRWZ  1 2.0
+NZ RACZ  1 2.0
 NZ RAGZ  1 2.0
 NZ RAHZ  1 2.0
 NZ RIGZ  1 2.0
@@ -99,6 +106,7 @@ NZ TUWZ  1 2.0
 NZ TWGZ  1 2.0
 NZ TWVZ  1 2.0
 NZ UTU   1 2.0
+NZ WACZ  1 2.0
 NZ WATZ  1 2.0
 NZ WHHZ  1 2.0
 NZ WHRZ  1 2.0
@@ -159,6 +167,7 @@ NZ RTZ   1 3.0
 NZ SYZ   1 3.0
 NZ THZ   1 3.0
 NZ TLZ   1 3.0
+NZ TON8  1 3.0
 NZ TOZ   1 3.0
 NZ TRVZ  1 3.0
 NZ TSZ   1 3.0
@@ -172,4 +181,5 @@ NZ WHVZ  1 3.0
 NZ WHZ   1 3.0
 NZ WIZ   1 3.0
 NZ WKZ   1 3.0
+NZ WSRZ  1 3.0
 NZ WVZ   1 3.0
