CHANGED Agency ID + ADD a scolv ADVANCED option

--- a/etc/scolv.cfg
+++ b/etc/scolv.cfg
@@ -51,4 +51,286 @@ olv.arrivalTable.visibleColumns = Used, Status, Phase, Net, Sta, Loc/Cha, Res, D
 
 # enable/disable advanced options (magnitude parameters) for artificial
 # origin creations
-olv.artificialOriginAdvanced = false
+olv.artificialOriginAdvanced = true
+
+
+########################3
+include nll.cfg
+# Use slink (seedlink) as record source service
+recordstream.service = combined
+
+#recordstream.service = slink # msrtsimul replay purposes ?
+# Connect to local seedlink server via port 18000
+#recordstream.source = "rosella.geonet.org.nz:18000;rosella.geonet.org.nz:18001??slinkMax=86400"
+# Could be changed to spare ones (rhubarb is the Main server) ...
+#recordstream.source = "rhubarb.geonet.org.nz:18000;rhubarb.geonet.org.nz:18001??slinkMax=86400"
+recordstream.source = "sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=21600"
+#recordstream.source = "localhost:18000" # msrtsimul replay purposes ?
+# msrtsimul replay purposes ?
+#recordstream.source = /mnt/store1/seismic/sds     
+
+#Default Event type
+olv.defaultEventType = earthquake
+
+# Configures the default filters selectable in manual picker.
+# The entry with a leading "@" is selected as default filter.
+picker.filters = "@Local;BW(4,2,15)", "Tele;BW(3,0.1,4)" ,"RegionalS;BW_HP(4,0.5)","DistantS;BW_LP(4,0.2)"
+
+# Change scolv Display order for clarity / Also can be done in global.cfg
+# Configure the columns of the event list that are visible initially.
+# The first column containing the origin time is always visible and cannot
+# be hidden.
+# Possible values are:
+#  * Type
+#  * M
+#  * TP
+#  * Phases
+#  * Lat
+#  * Lon
+#  * Depth
+#  * Stat
+#  * Agency
+#  * Region
+#  * ID
+eventlist.visibleColumns = M, TP, Phases, Lat, Lon, Depth, Stat, Type , Region, ID
+# for Clarity # Can be modified in GUI
+#eventlist.visibleColumns = ID, Region, Phases, M, Depth
+
+# Define a list of favourite phase for quick access
+picker.phases.favourites = Pn, P, Pg, PmP, P1, Sg, S, Sn, SmS
+
+# When loading the traces of an event (origin) are
+# all picks (not only the associated ones) going to be
+# loaded within that timewindow from the database
+# for testing purposes
+picker.loadAllPicks = true
+
+# Load all components (Z,N,E) when opening the picker
+# per default
+picker.loadAllComponents = true
+
+# In V2012.102 Display changes don t work that  well / permutation issues
+#
+# In arrival table:
+olv.arrivalTable.visibleColumns = Used, Phase, Sta, Loc/Cha,  Res, Weight, Takeoff, Method, Dis, Time  
+#olv.arrivalTable.visibleColumns = Used, Phase, Sta, Res
+
+#plugin things
+#plugins = ${plugins}, mlh, locnll, dbmysql
+plugins = ${plugins}, mlh, locnll
+
+#
+# Graphical display changes
+scheme.fonts.base.family = Arial
+scheme.fonts.base.size = 12
+
+# Overriden in global.cfg
+#amplitudes = ML, MLh, MLv, mb, mB, mBc, Mwp, Ms(BB), Mjma
+# Mlh plugin amplitude parameters
+# MLh clipping level, in raw counts, eg. 80% of 2^23 = 6710886
+#  module.trunk.global.MLh.ClippingThreshold = 6710886
+# here should be accounted for in global.cfg
+#amplitudes = ML, MLh, MLv, mb, mB, mBc, Mwp, Ms(BB), Mjma
+#magnitudes = ML, MLh, MLv, mb, mB, mBc, Mw(mB), Mw(Mwp),Mwp, Ms(BB), Mjma, M
+#amplitudes = MLv, ML, mB
+#magnitudes = MLv, ML, mB, Mw(mB), M
+#
+visibleMagnitudes = ML, MLh, MLv, mb, mB, mBc, Mw(mB), Mw(Mwp), Mwp, Ms(BB), Mjma, M
+
+#
+#
+reloc.locator = NonLinLoc
+
+#
+olv.showSummary = true
+
+### Map display
+# if true, shows distances in km - degrees otherwise
+scheme.unit.distanceInKM = true
+
+# map display fep regions
+map.layers.fep.visible = true
+
+# fep rank ?
+map.layers.fep.rank = 3
+
+# Draw fep names
+map.layers.fep.drawName = true
+
+# Origins location map display
+scheme.colors.originSymbol.depth.gradient = 0:FF0000, 50:ffA500, 100:FFFF00, 250:00FF00, 600:0000FF
+
+# Setting this to true will not interpolate between the depth steps and the
+# color for a depth <= input is used.
+scheme.colors.originSymbol.depth.discrete = true
+
+# The origin symbol depth colors.
+#scheme.colors.origin.Symbol.depth500 = 000000
+#scheme.colors.originSymbol.depth100 = 00FF00
+#scheme.colors.originSymbol.depth50 = 000000 
+#scheme.colors.picks.automatic = 00FF00
+scheme.showmenu = true
+#scheme.colors.picks.automatic = d000ff
+scheme.colors.magnitudes.unset = d000ff00
+
+#### Precision display
+# Depth
+scheme.precision.depth = 0
+
+# Latitude/Longitude precision
+scheme.precision.location = 2
+
+# Pick times
+scheme.precision.pickTime = 2
+
+# RMS precision
+scheme.precision.rms = 2
+
+# configure the precision of displayed offset/amp in all trace widgets
+scheme.precision.traceValues = 1
+
+picker.loadStrongMotion = true
+
+olv.computeMagnitudesAfterRelocate = false
+
+olv.computeMagnitudesSilently = false
+
+olv.Pvel = 6
+
+olv.drawGridLines = true
+
+olv.defaultAddStationsDistance = 3
+
+olv.hideStationsWithoutData = false
+
+# GUI artificial origins default depth
+olv.defaultDepth = 10
+
+# Shows unassociated stations in the vicinity of an event (since V 2011.322)
+# Choice of a ~150 km  distance
+olv.map.stations.unassociatedMaxDist = 1.5
+
+# Set unassiociated station color - Pink
+scheme.colors.stations.idle = d000ff
+
+#
+picker.uncertainties.local = 0.1, 0.25, 0.5, 1.0, 2.0
+
+picker.uncertainties.preferred = local
+
+picker.showCrossHairCursor = true
+
+picker.limitStationAcquisition = false
+
+picker.limitStationAcquisitionCount = 15
+
+picker.showAllComponents = true 
+
+picker.allComponentsMaximumDistance = 10
+
+picker.usePerStreamTimeWindows = false
+
+#Signal display length
+# changed from 60 s to 3mn # Can be modified in GUI
+picker.preOffset = 900
+
+# changed from 120 to 5mn # Can be modified in GUI
+picker.postOffset = 600
+
+# changed from 1800 to 10mn # Can be modified in GUI
+picker.minimumTimeWindow = 3000 
+
+#
+picker.removeAutomaticPicksFromStationAfterManualReview = false
+
+picker.removeAllAutomaticPicksAfterManualReview = false
+
+#Amplitude measure GUI options
+amplitudePicker.preOffset = 300
+
+amplitudePicker.postOffset = 300
+
+amplitudePicker.filters = ""
+
+#### Add some addtional Phases options available in Version Zurich
+# Define two phase groups: regional and teleseismic
+picker.phases.groups = regional, teleseismic
+
+# Define all phases of group "regional"
+picker.phases.groups.regional = Pn, P, Pg, PmP, P1, Sg, S, Sn, SmS
+
+# Define all phases of group "teleseismic"
+picker.phases.groups.teleseismic = pP, PKP
+
+#Also could be usefull when user wants to swap from P to S phase in arrival tab selection
+#######
+# Focal mechanism computation  options
+olv.computeMissingTakeOffAngles = true
+
+# Magnitude conmputation after relocation
+olv.computeMagintudesSilently = true 
+
+#### Additional Tools for QUALITY estimation ####
+
+## DISPLAY the 'SED QUALITY' parameters
+# 1. In the LOCATION TAB 
+# Define the comment id to be used
+display.origin.comment.id = SED.quality
+
+# Define the default display value if no comment is available
+display.origin.comment.default = "-"
+
+# Define the label text in the information panel for this value
+display.origin.comment.label = "SED_Qual"
+
+# 2. In the EVENT TAB 
+# Define the default value if no comment is present
+eventedit.customColumn.default = "-"
+
+# Define the comment id to be used
+eventedit.customColumn.originCommentID = SED.quality
+
+# Define the column header label
+eventedit.customColumn = "SED_Qual"
+
+# Define the column position in the table
+eventedit.customColumn.pos = 4
+
+# Allows to map comment values (strings) to colors. In this case the
+# comment will have A,B,C or D which is mapped to green, yellow, orange and
+# red
+eventedit.customColumn.colors = "A:00FF00","B:rgb(64,192,0)","C:rgb(192,64,0)","D:FF0000"
+
+# 3. In the EVENTS TAB 
+# Define the default value if no comment is present
+eventlist.customColumn.default = "-"
+
+# Define the comment id to be used
+eventlist.customColumn.originCommentID = "SED.quality"
+
+# Define the column header label
+eventlist.customColumn = "SED_Qual"
+
+# Define the column position in the table
+eventlist.customColumn.pos = 5
+
+# Allows to map comment values (strings) to colors. In this case the
+# comment will have A,B,C or D which is mapped to green, yellow, orange and
+# red
+eventlist.customColumn.colors = "A:00FF00","B:rgb(64,192,0)","C:rgb(192,64,0)","D:FF0000"
+
+
+## EXTERNAL QUALITY scripts 
+
+## 1. Display in info Panel of the location tab 
+# Define the available addons to be used
+#display.origin.addons = qual1 
+# Configure each addon
+#display.origin.addon.qual1.label = "standard error"
+#display.origin.addon.qual1.script = "/work/seiscomp3/etc/scripts/StandErr.py"
+
+#display.origin.addon.qual2.label = "Qual2"
+#display.origin.addon.qual2.script = "@CONFIGDIR@/scripts/scolv/qual2"
+##
+
+
