ADDED SDS Path on /mnt mount

--- a/etc/scolv.cfg
+++ b/etc/scolv.cfg
@@ -60,6 +60,7 @@ include nll.cfg
 recordstream.service = combined
 
 #recordstream.service = slink # msrtsimul replay purposes ?
+#recordstream.service = sdsarchive # msrtsimul replay purposes ?
 # Connect to local seedlink server via port 18000
 #recordstream.source = "rosella.geonet.org.nz:18000;rosella.geonet.org.nz:18001??slinkMax=86400"
 # Could be changed to spare ones (rhubarb is the Main server) ...
@@ -67,7 +68,7 @@ recordstream.service = combined
 recordstream.source = "sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=21600"
 #recordstream.source = "localhost:18000" # msrtsimul replay purposes ?
 # msrtsimul replay purposes ?
-#recordstream.source = /mnt/store1/seismic/sds     
+#recordstream.source = /mnt/SDSarchive/sds         
 
 #Default Event type
 olv.defaultEventType = earthquake
