ADDED plugins additional parameter

--- a/etc/scmaster.cfg
+++ b/etc/scmaster.cfg
@@ -33,7 +33,7 @@ admin.password = ""
 ################# USED LOCAL CONFIGURATION PARAMETERS ! ##################3
 
 # Defines a list of modules loaded at startup.
-plugins = dbplugin
+plugins = ${plugins},dbplugin
 core.plugins = dbmysql
 
 # Selected the database driver to use. Database drivers are available through
