Fixed a parameter name in scolv

--- a/etc/scolv.cfg
+++ b/etc/scolv.cfg
@@ -170,7 +170,7 @@ scheme.colors.originSymbol.depth.discrete = true
 #scheme.colors.originSymbol.depth100 = 00FF00
 #scheme.colors.originSymbol.depth50 = 000000 
 #scheme.colors.picks.automatic = 00FF00
-scheme.showmenu = true
+scheme.showMenu = true
 #scheme.colors.picks.automatic = d000ff
 scheme.colors.magnitudes.unset = d000ff00
 
