Modified a customized scevent configuration for specific purposes: NLL only computations merged with preexisting LOCsat origins

--- a/etc/scevent_standalone.cfg
+++ b/etc/scevent_standalone.cfg
@@ -1,5 +1,10 @@
+##standalone plugins to be set when using --config-fle option
+core.plugins = dbmysql
+plugins.dbPlugin.dbDriver = mysql
+##
+
 ### plugins area
-plugins = ${plugins}, evmmi
+plugins = ${plugins}, evmmi, dbplugin
 ### Added
 
 # Author for created objects
@@ -28,16 +33,33 @@ eventAssociation.minimumDefiningPhases = 10
 
 # Search 1800 seconds BEFORE origin time of a
 # new location for matching events
-eventAssociation.eventTimeBefore = 1800
+#eventAssociation.eventTimeBefore = 1800
+eventAssociation.eventTimeBefore =   30
 
 # Search 1800 seconds AFTER origin time of a
 # new location for matching events
-eventAssociation.eventTimeAfter = 1800
+#eventAssociation.eventTimeAfter = 1800
+eventAssociation.eventTimeAfter =   30   
 
 # An origin will be associated to an existing
 # event when at least 3 picks matches with
 # former associated origins
-eventAssociation.minimumMatchingArrivals = 10
+eventAssociation.minimumMatchingArrivals = 100  # to activate max distance and maximumtime otpion on origins
+
+# Associates an origin with an existing event
+# if the origin time differs not more
+# than 60 seconds unless the minimumMatchingArrivals
+# criteria matches.
+#eventAssociation.maximumTimeSpan = 60
+eventAssociation.maximumTimeSpan = 20
+
+# Associates an origin to an existing event
+# when the location differs not more
+# than 5 degrees unless the minimumMatchingArrivals
+# criteria matches
+#eventAssociation.maximumDistance = 5
+eventAssociation.maximumDistance = 1
+
 
 # If this time window in seconds is negative, pickIDs
 # are compared to find matching arrivals. A non negative
@@ -53,20 +75,6 @@ eventAssociation.maximumMatchingArrivalTimeDiff = -1
 # must be within eventAssociation.maximumMatchingArrivalTimeDiff
 # or if one matching arrival is enough.
 eventAssociation.compareAllArrivalTimes = true
-
-# Associates an origin with an existing event
-# if the origin time differs not more
-# than 60 seconds unless the minimumMatchingArrivals
-# criteria matches.
-#eventAssociation.maximumTimeSpan = 60
-eventAssociation.maximumTimeSpan = 20
-
-# Associates an origin to an existing event
-# when the location differs not more
-# than 5 degrees unless the minimumMatchingArrivals
-# criteria matches
-#eventAssociation.maximumDistance = 5
-eventAssociation.maximumDistance = 1
 
 # Minimum number of station magnitudes required for Mw(mB) to be considered as
 # preferred magnitude.
@@ -126,8 +134,8 @@ eventAssociation.magTypes = M
 #eventAssociation.priorities = AGENCY, STATUS,\
 #                              PHASES_AUTOMATIC,\
 #                              TIME_AUTOMATIC
-eventAssociation.priorities = STATUS, AGENCY, METHOD
-eventAssociation.methods = NonLinLoc, LOCSAT
+#eventAssociation.priorities = STATUS, AGENCY, METHOD
+#eventAssociation.methods = NonLinLoc, LOCSAT
 
 
 
