Prepared cfg files for a  REAL TIME TEST on v2014.016

--- a/etc/global.cfg
+++ b/etc/global.cfg
@@ -34,7 +34,7 @@ recordstream.source = "sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:1
 
 
 # The agencyID to use when tagging processing results
-agencyID = WEL(GNS_2013.274)
+agencyID = WEL(GNS_vm2014.016)
 
 # Organization name used mainly by ArcLink and SeedLink.
 organization = Geonet
