--- a/etc/scolv.cfg
+++ b/etc/scolv.cfg
@@ -57,18 +57,18 @@ olv.artificialOriginAdvanced = true
 ########################3
 include nll.cfg
 # Use slink (seedlink) as record source service
-#recordstream.service = combined
+recordstream.service = combined
 
 #recordstream.service = slink # msrtsimul replay purposes ?
-recordstream.service = sdsarchive # msrtsimul replay purposes ?
+#recordstream.service = sdsarchive # msrtsimul replay purposes ?
 # Connect to local seedlink server via port 18000
 #recordstream.source = "rosella.geonet.org.nz:18000;rosella.geonet.org.nz:18001??slinkMax=86400"
 # Could be changed to spare ones (rhubarb is the Main server) ...
 #recordstream.source = "rhubarb.geonet.org.nz:18000;rhubarb.geonet.org.nz:18001??slinkMax=86400"
-#recordstream.source = "sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=21600"
+recordstream.source = "sl-backup1.geonet.org.nz:18000;sl-backup1.geonet.org.nz:18001??slinkMax=21600"
 #recordstream.source = "localhost:18000" # msrtsimul replay purposes ?
 # msrtsimul replay purposes ?
-recordstream.source = /mnt/SDSarchive         
+#recordstream.source = /mnt/SDSarchive         
 
 #Default Event type
 olv.defaultEventType = earthquake
