--- a/etc/scolv.cfg
+++ b/etc/scolv.cfg
@@ -210,6 +210,7 @@ olv.defaultDepth = 10
 # Shows unassociated stations in the vicinity of an event (since V 2011.322)
 # Choice of a ~150 km  distance
 olv.map.stations.unassociatedMaxDist = 1.5
+olv.map.stations.unassociatedMaxDist = 50
 
 # Set unassiociated station color - Pink
 scheme.colors.stations.idle = d000ff
