CORRECTED syntax in global.cfg

--- a/etc/global.cfg
+++ b/etc/global.cfg
@@ -14,7 +14,7 @@ logging.file.rotator.timeSpan = 86400
 
 # Keep 7 rotated log files
 logging.file.rotator.archiveSize = 2
-
+#logging.file.rotator.archivesize = 2
 
 # Server connection
 connection.server = localhost
