SELECTED correct thresholds.maxGapLength parameter in scautoloc

--- a/etc/scautopick.cfg
+++ b/etc/scautopick.cfg
@@ -46,9 +46,9 @@ thresholds.triggerOff = 1.5
 
 # The maximum gap length to handle. Gaps larger
 # than this size reset the picker
-thresholds.maxGapLength = 4.5
+#thresholds.maxGapLength = 4.5
 thresholds.maxGapLength = 0.5
-module.trunk.global.thresholds.maxGapLength = 0.5 # ?
+#module.trunk.global.thresholds.maxGapLength = 0.5 # ?
 
 # The timeWindow used to compute a maximum (snr)
 # amplitude on the filtered stream
